# ceia-nlp

./: pyproject.toml
desafios/: Untitled.ipynb  desafio_1.ipynb  desafio_2.ipynb  scraper.py  text_generation_rnn_model.keras
desafios/.ipynb_checkpoints/: desafio_1-checkpoint.ipynb
desafios/d1/: desafio_1.ipynb  pyproject.toml
desafios/d2/: desafio_2.ipynb
desafios/d3/: clase4.ipynb  desafio_3.ipynb  pyproject.toml  text_generation_rnn_model.keras
desafios/d3/.ipynb_checkpoints/: clase4-checkpoint.ipynb  desafio_3-checkpoint.ipynb
desafios/gutenberg_ebooks/: Aeschylus_-_Agamemnon.txt  Aeschylus_-_The_Eumenides.txt  American_State_Papers_-_Declaration_of_Independence.txt  American_State_Papers_-_The_Constitution_of_the_United_States_of_America.txt  Antoine_Laurent_Lavoisier_-_Elements_of_Chemistry.txt  Aristophanes_-_The_Acharnians.txt  Aristophanes_-_The_Clouds.txt  Aristophanes_-_The_Frogs.txt  Aristophanes_-_The_Knights.txt  Aristophanes_-_The_Wasps.txt  Aristotle_-_History_of_Animals.txt  Aristotle_-_Nicomachean_Ethics.txt  Aristotle_-_On_the_Heavens.txt  Aristotle_-_On_the_Soul.txt  Aristotle_-_Rhetoric.txt  Aristotle_-_The_Athenian_Constitution.txt  Blaise_Pascal_-_The_Provincial_Letters.txt  Charles_Darwin_-_The_Descent_of_Man,_and_Selection_in_Relation_to_Sex.txt  Christiaan_Huygens_-_Treatise_on_Light.txt  Euripides_-_Alcestis.txt  Euripides_-_Andromache.txt  Euripides_-_Electra.txt  Euripides_-_Ion.txt  Euripides_-_Iphigenia_in_Aulis.txt  Euripides_-_Iphigenia_in_Tauris.txt  Euripides_-_Rhesus.txt  Galen_-_On_the_Natural_Faculties.txt  Georg_Wilhelm_Friedrich_Hegel_-_The_Philosophy_of_History.txt  Hippocrates_-_On_the_Surgery.txt  James_Boswell_-_The_Life_of_Samuel_Johnson,_LL.D..txt  Jean_Jacques_Rousseau_-_A_Discourse_on_the_Origin_of_Inequality.txt  John_Milton_-_Areopagitica.txt  John_Milton_-_Comus.txt  John_Stuart_Mill_-_Utilitarianism.txt  Karl_Marx_-_Capital.txt  Karl_Marx_and_Friedrich_Engels_-_Manifesto_of_the_Communist_Party.txt  Michael_Faraday_-_Experimental_Researches_in_Electricity.txt  Miguel_de_Cervantes_-_The_History_of_Don_Quixote_de_la_Mancha.txt  Plato_-_Crito.txt  Ptolemy_-_Almagest.txt  (+20 more)
