[project]
name = "nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "leo centurion",email = "centurionm.leo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "notebook (>=7.4.1,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
