[project]
name = "nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "leo centurion",email = "centurionm.leo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8, <3.12"
dependencies = [
    "gensim (>=4.3.3,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (==1.1.0)",
    "matplotlib (==3.4)",
    "pandas (==2.0.0)",
    "keras (==2.12.0)",
    "tensorflow-io-gcs-filesystem (==0.29.0)",
    "tensorflow[and-cuda] (==2.12.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
