[project]
name = "d3"
version = "0.1.0"
description = ""
authors = [
    {name = "leo centurion",email = "centurionm.leo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow[and-cuda] (>=2.19.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false